# ICC_Computer_Bot

./: bot.py  format.sh  format.sh.relog_underdraw.draw  main.py  math_helpers.py  pyproject.toml  ship_parser.py  sustain.py  tmp.py  todo.md
