[tool.poetry]
name = "icccomputerbot"
version = "0.1.0"
description = ""
authors = ["alrond <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-py-slash-command = "^3.0.1"
discord = "^1.7.3"
schedule = "^1.1.0"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
